tests/new_bad_type_arg_value.stderr
tests/new_bad_type_arg_value.hop:5:20: error: HOP2003: unknown type
